Fixed travis issue.