@@ -5,17 +5,17 @@
     <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
-    
+
     <modules>
         <module>sharding-jdbc-core</module>
     </modules>
-    
+
     <properties>
         <java.version>1.7</java.version>
         <maven.version.range>[3.0.4,)</maven.version.range>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.locale>zh_CN</project.build.locale>
-        
+
         <lombok.version>1.16.4</lombok.version>
         <guava.version>18.0</guava.version>
         <commons-lang.version>2.6</commons-lang.version>
@@ -42,20 +42,20 @@
         <metrics.version>3.1.0</metrics.version>
         <jfinal.version>2.0</jfinal.version>
         <groovy.version>2.4.5</groovy.version>
-        
+
         <mysql-connector-java.version>5.1.30</mysql-connector-java.version>
         <h2.version>1.4.184</h2.version>
-        
+
         <junit.version>4.12</junit.version>
         <dbunit.version>2.5.0</dbunit.version>
         <unitils.core.version>3.4.2</unitils.core.version>
         <spring-test-dbunit.version>1.2.1</spring-test-dbunit.version>
         <mockito.version>1.10.19</mockito.version>
-        
+
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
         <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
-        <maven-surefire-report-plugin.version>2.18.1</maven-surefire-report-plugin.version>
+        <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
         <maven-site-plugin.version>3.4</maven-site-plugin.version>
         <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
         <maven-enforcer-plugin.version>1.4</maven-enforcer-plugin.version>
@@ -73,7 +73,7 @@
         <taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
         <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
     </properties>
-    
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -274,14 +274,14 @@
                 <version>${groovy.version}</version>
                 <classifier>indy</classifier>
             </dependency>
-            
+
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector-java.version}</version>
                 <scope>runtime</scope>
             </dependency>
-            
+
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -338,7 +338,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
+
     <build>
         <pluginManagement>
             <plugins>
@@ -365,11 +365,9 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>${maven-surefire-report-plugin.version}</version>
+                    <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
-                        <forkMode>once</forkMode>
-                        <argLine>-XX:-UseSplitVerifier</argLine>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -523,7 +521,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <reporting>
         <plugins>
             <plugin>
@@ -595,7 +593,7 @@
             </plugin>
         </plugins>
     </reporting>
-    
+
     <repositories>
         <repository>
             <id>henryyan-mavenrepo</id>
@@ -622,30 +620,30 @@
             </releases>
         </repository>
     </repositories>
-    
+
     <url>http://www.dangdang.com</url>
     <description>RDB Sharding</description>
-    <licenses> 
+    <licenses>
         <license>
             <name>Apache Licene 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
     <scm>
         <connection>scm:https://github.com/dangdangdotcom/sharding-jdbc</connection>
         <developerConnection>scm:https://github.com/dangdangdotcom/sharding-jdbc</developerConnection>
         <url>https://github.com/dangdangdotcom/sharding-jdbc</url>
     </scm>
-    
+
     <mailingLists>
         <mailingList>
             <name>Zhangliang</name>
             <post>zhangliang@dangdang.com</post>
         </mailingList>
     </mailingLists>
-    
+
     <developers>
         <developer>
             <id>zhangliang</id>
@@ -654,7 +652,7 @@
             <timezone>8</timezone>
         </developer>
     </developers>
-    
+
     <distributionManagement>
         <snapshotRepository>
             <id>sonatype-nexus-snapshots</id>
